; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_xmlIO.c_xmlDefaultExternalEntityLoader.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_xmlIO.c_xmlDefaultExternalEntityLoader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@XML_PARSE_NONET = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"NULL\00", align 1
@.str.1 = private unnamed_addr constant [37 x i8] c"failed to load external entity \22%s\22\0A\00", align 1
@xmlGenericErrorContext = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*, %struct.TYPE_7__*)* @xmlDefaultExternalEntityLoader to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @xmlDefaultExternalEntityLoader(i8* %0, i8* %1, %struct.TYPE_7__* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_7__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.TYPE_7__* %2, %struct.TYPE_7__** %7, align 8
  store i32* null, i32** %8, align 8
  store i32* null, i32** %9, align 8
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %12 = icmp ne %struct.TYPE_7__* %11, null
  br i1 %12, label %13, label %37

13:                                               ; preds = %3
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @XML_PARSE_NONET, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %37

20:                                               ; preds = %13
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  store i32 %23, i32* %10, align 4
  %24 = load i32, i32* @XML_PARSE_NONET, align 4
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = sub nsw i32 %27, %24
  store i32 %28, i32* %26, align 4
  %29 = load i8*, i8** %5, align 8
  %30 = load i8*, i8** %6, align 8
  %31 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %32 = call i32* @xmlNoNetExternalEntityLoader(i8* %29, i8* %30, %struct.TYPE_7__* %31)
  store i32* %32, i32** %8, align 8
  %33 = load i32, i32* %10, align 4
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %35 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %34, i32 0, i32 0
  store i32 %33, i32* %35, align 4
  %36 = load i32*, i32** %8, align 8
  store i32* %36, i32** %4, align 8
  br label %71

37:                                               ; preds = %13, %3
  %38 = load i32*, i32** %9, align 8
  %39 = icmp eq i32* %38, null
  br i1 %39, label %40, label %43

40:                                               ; preds = %37
  %41 = load i8*, i8** %5, align 8
  %42 = bitcast i8* %41 to i32*
  store i32* %42, i32** %9, align 8
  br label %43

43:                                               ; preds = %40, %37
  %44 = load i32*, i32** %9, align 8
  %45 = icmp eq i32* %44, null
  br i1 %45, label %46, label %54

46:                                               ; preds = %43
  %47 = load i8*, i8** %6, align 8
  %48 = icmp eq i8* %47, null
  br i1 %48, label %49, label %50

49:                                               ; preds = %46
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %6, align 8
  br label %50

50:                                               ; preds = %49, %46
  %51 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %52 = load i8*, i8** %6, align 8
  %53 = call i32 @__xmlLoaderErr(%struct.TYPE_7__* %51, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.1, i64 0, i64 0), i8* %52)
  store i32* null, i32** %4, align 8
  br label %71

54:                                               ; preds = %43
  %55 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %56 = load i32*, i32** %9, align 8
  %57 = bitcast i32* %56 to i8*
  %58 = call i32* @xmlNewInputFromFile(%struct.TYPE_7__* %55, i8* %57)
  store i32* %58, i32** %8, align 8
  %59 = load i32*, i32** %9, align 8
  %60 = icmp ne i32* %59, null
  br i1 %60, label %61, label %69

61:                                               ; preds = %54
  %62 = load i32*, i32** %9, align 8
  %63 = load i8*, i8** %5, align 8
  %64 = bitcast i8* %63 to i32*
  %65 = icmp ne i32* %62, %64
  br i1 %65, label %66, label %69

66:                                               ; preds = %61
  %67 = load i32*, i32** %9, align 8
  %68 = call i32 @xmlFree(i32* %67)
  br label %69

69:                                               ; preds = %66, %61, %54
  %70 = load i32*, i32** %8, align 8
  store i32* %70, i32** %4, align 8
  br label %71

71:                                               ; preds = %69, %50, %20
  %72 = load i32*, i32** %4, align 8
  ret i32* %72
}

declare dso_local i32* @xmlNoNetExternalEntityLoader(i8*, i8*, %struct.TYPE_7__*) #1

declare dso_local i32 @__xmlLoaderErr(%struct.TYPE_7__*, i8*, i8*) #1

declare dso_local i32* @xmlNewInputFromFile(%struct.TYPE_7__*, i8*) #1

declare dso_local i32 @xmlFree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
